# antihyip-rest-v1

./: .gitignore  manage.py  pyproject.toml
antihyip/: asgi.py  settings.py  urls.py  wsgi.py
api/: serializers.py  urls.py  views.py  views_old.py
hyiptest/: forms.py  models.py  serializers.py  urls.py  views.py  views_old.py
hyiptest/migrations/: 0001_initial.py
hyiptest/templates/: base_generic.html  home.html
hyiptest/templates/hyiptest/: badsite_detail.html  badsite_list.html  domainsearch_form.html  question_confirm_delete.html  question_detail.html  question_form.html  question_list.html  search_domain.html
hyiptest/tests/: test_models.py  test_views.py
mysite/: settings.py  urls.py
